feat(🌟config): web config and corsconfiguration